--- a/_pages/404.md
+++ b/_pages/404.md
@@ -7,4 +7,4 @@ permalink: /404.html
 
 Sorry, but the page you were trying to view does not exist.
 
-# Insérer un dinosaure rigolo ici 
+<!--*Insérer un dinosaure rigolo ici*-->
